# STM32F103C8_HAL_Skeleton

./: .gitignore  .mxproject  .project  CMakeLists.txt  README.md  STM32F103C8_HAL_Skeleton.ioc  STM32F103C8_HAL_Skeleton.txt  Whatcha.ioc  mx.scratch  stm32f103.cmake
Inc/: stm32f1xx_hal_conf.h
OldConfig/: .cproject  Whatcha.xml
Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usbd_cdc_if.c
